# ftth-sip

./: Cargo.toml  README.md  SPECS.md
examples/: ftth-sip-test-server.rs
src/: config.rs  error.rs  lib.rs  net.rs
src/media/: mod.rs  relay.rs
src/sip/: mod.rs  proxy.rs  registration.rs
src/sip/proxy/: backend.rs  builder.rs  mod.rs  registrar.rs  state.rs  utils.rs
