[package]
name = "ftth-sip"
version = "0.1.0"
edition = "2024"

[features]
default = ["telemetry"]
telemetry = ["tracing-subscriber"]
console = ["dep:console-subscriber"]

[dependencies]
console-subscriber = { version = "0.4", optional = true }
ftth-rsipstack = "4.0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "time", "signal"] }
async-trait = "0.1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", optional = true, features = ["fmt", "env-filter", "ansi"] }
bytes = "1"
tokio-util = "0.7"
socket2 = "0.6"
libc = "0.2"
serde = { version = "1", features = ["derive"], optional = true }
serde_with = { version = "3", optional = true }
md5 = "0.7"

[dev-dependencies]
anyhow = "1"
clap = { version = "4.5.4", features = ["derive"] }

[profile.release]
lto = true
opt-level = "s"
codegen-units = 1
panic = "abort"
strip = "symbols"
